welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value Direction
  getDirection==Direction.EST
                ^