welcome.lessons.welcome.summative.Moria.scala.code
def Moria(){
  droite();droite()
  getDirection==Direction.EST
}